fix horizontal scroll

--- a/src/shared/components/gallery/Gallery.module.scss
+++ b/src/shared/components/gallery/Gallery.module.scss
@@ -1,17 +1,22 @@
 .gallery {
-  position: relative;
   background-color: #d53f41;
-  margin-left: -5vw;
-  margin-right: -5vw;
-  overflow: hidden;
 
+  overflow: hidden;
+  height: 100vh;
+  width: 100%;
   &__container {
-    column-gap: 15em;
-    padding: 0 15em;
-    width: 400%;
-    height: 80vh;
+    position: relative;
+    height: 100%;
+    width: 100%;
+  }
+
+  &__horizontal {
     display: flex;
-    flex-wrap: nowrap;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    will-change: transform;
   }
 
   &__counter {
@@ -22,7 +27,6 @@
     mix-blend-mode: difference;
     line-height: 16px;
     color: #dbd8d6;
-
     font-family: "Bai Jamjuree";
     font-weight: 600;
     font-size: 16px;
