--- a/src/shared/components/gallery/gallery-item/GalleryItem.module.scss
+++ b/src/shared/components/gallery/gallery-item/GalleryItem.module.scss
@@ -1,8 +1,11 @@
 .item {
-  width: 100%;
+  width: 100vw; // Ключевое исправление!
   height: 100%;
   position: relative;
   will-change: transform;
+  flex-shrink: 0; // Важно!
+  padding: 0 5vw; // Добавляем адаптивные отступы
+  box-sizing: border-box; // Учитываем padding в ширине
 
   &__info {
     position: absolute;
@@ -19,6 +22,15 @@
 
     font-size: 6vw;
     -webkit-font-smoothing: antialiased;
+  }
+
+  &__content {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: 0 auto;
   }
 
   &__subtitle {
@@ -49,12 +61,12 @@
     width: 100vw;
   }
   &__image {
+    margin-left: 5%;
     background-size: cover;
     background-position: center;
     transform-origin: center;
     width: 100%;
     height: 100%;
-    will-change: transform;
     transform: scale(0.7);
     transition: all 1.5s cubic-bezier(0.77, 0, 0.175, 1);
     filter: grayscale(100%) sepia(20%) brightness(80%);
