--- a/src/shared/styles/globals.scss
+++ b/src/shared/styles/globals.scss
@@ -36,7 +36,8 @@ section {
 }
 
 .main-container {
-  padding: 0 5vw;
+  padding-left: 5vw;
+  padding-right: 5vw;
 }
 
 .title {
